--- a/app/views/user_mailer/receipt_email.html.erb
+++ b/app/views/user_mailer/receipt_email.html.erb
@@ -4,7 +4,21 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @order.email %></h1>
-    <p>Thanks for joining and have a great day!</p>
+    <h1>Thank you for shopping at Jungle.</h1>
+    <h2>Your Order ID: <%= @order.id %></h2>
+    <h3>Your Order Details:</h3>
+
+    <% @order_total = 0 %>
+    <% @order.line_items.each do |line_item| %>
+      <% item_total = line_item.product.price * line_item.quantity %>
+      <% @order_total += item_total %>
+      <p><strong>Name:</strong> <%= line_item.product.name %></p>
+      <p><strong>Description:</strong><%= line_item.product.description %></p>
+      <p><strong>Quantity:</strong> <%= line_item.quantity %></p>
+      <p><strong>Price:</strong><%= line_item.product.price %></p>
+      <br>
+    <% end %>
+
+    <p><strong>Total: </strong><%= @order_total %></p>
   </body>
 </html>
