--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,9 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if cart.empty? %>
+    <h1> Your cart is empty! </h1>
+  <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -49,5 +52,10 @@
       <% end %>
     </div>
   </div>
-
+  <% end %>
+  <div class="shopping-link-back">
+    <%= link_to "Continue Shopping", root_path, class: 'btn btn-md btn-primary' %>
+  </div>
 </section>
+
+
